2007-12-10  John W. Eaton  <jwe@octave.org>

	* oct-hist.cc (default_history_file): Use file_ops::concat.
	* load-path.cc (dir_info::initialize, dir_info::get_file_list,
	load_path::do_find_fcn, load_path::do_find_file, genpath,
	execute_pkg_add_or_del, load_path::do_find_first_of,
	load_path::do_find_all_first_of): Likewise.

	* help.cc (Flookfor): Avoid doubling directory separator.
	* dirfns.cc (Fmkdir): Likewise.

	* pt-mat.cc (tree_matrix::rvalue): Produce sq_string if any
	strings are sq_string objects.

2007-12-07  David Bateman  <dbateman@free.fr>

	* data.cc (Fnorm): Don't return a scalar stored as a sparse
	matrix. Convert it to a scalar.

	* graphics.cc (check_limit_val): Delete.
	(check_limit_vals): Simplify and no longer use check_limit_val.

2007-12-05  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.18+.

2007-12-05  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.18.
	(OCTAVE_API_VERSION): Now api-v30.
	(OCTAVE_RELEASE_DATE): Now 2007-12-05.

2007-12-04  John W. Eaton  <jwe@octave.org>

	* Makefile.in (INCLUDES): Add builtins.h to the list.

	* src/oct-hist.cc (default_history_file): Use += instead of
	push_back to append character to std::string object.

	* Makefile.in (LIBDLFCN): Delete all uses.

	* toplev.cc (octave_config_info): Remove LIBDLFCN and
	DLFCN_INCFLAGS from the list.
	* oct-conf.h.in (OCTAVE_CONF_DLFCN_INCFLAGS, OCTAVE_CONF_LIBDLFCN):
	Delete. 

	* error.cc (Ferror): Handle error id.

	* load-save.cc (Fsave, Fload): Doc fixes.
	From Marco Caliari <caliari@sci.univr.it>.

2007-12-04  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.h.in (base_properties::get_type
        base_properties::get___modified__,
	base_properties::get___myhandle__): New functions.

2007-12-04  Christoph Mayer  <Christoph.Mayer@dlr.de>.

	* toplev.h (clean_up_and_exit, recover_from_exception,
	do_octave_atexit, global_command, curr_parent_function):
	Tag with OCTINTERP_API. 
